--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+projects/P04-eCommerce Application/starter_code/.idea/
+
+exercises/c4 - testing/starter code/.idea/
